@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,26 +25,38 @@ public class ProductTagService {
 
 	public List<String> getTagsByProductId(int productId) {
 		return productTagRepository.findByProductId(productId).stream()
-			.map(productTag -> productTag.getTag().getName())
-			.collect(Collectors.toList());
+			.map(productTag -> productTag.getTag().getName()).toList();
 	}
 
 	@Transactional
-	public void addTagToProduct(int productId, int tagId) {
+	public void addTagToProduct(int productId, List<Integer> tagIds) {
 		Product product = productRepository.findById(productId)
-			.orElseThrow(() -> new DataNotFoundException("product",productId));
-		Tag tag = tagRepository.findById(tagId)
-			.orElseThrow(() -> new DataNotFoundException("Tag", "를 찾을 수 없습니다"));
+			.orElseThrow(() -> new DataNotFoundException("product", productId));
+
+		List<Tag> tags = tagRepository.findAllById(tagIds);
+
+		if (tags.size() != tagIds.size()) {
+			List<Integer> foundTagIds = tags.stream().map(Tag::getId).toList();
+			List<Integer> notFoundTagIds = tagIds.stream().filter(id -> !foundTagIds.contains(id)).toList();
+			throw new DataNotFoundException("Tags", notFoundTagIds.toString());
+		}
 
 		//새로운 ProductTag 엔티티를 생성 & 저장
-		ProductTag productTag = new ProductTag(product, tag);
-		productTagRepository.save(productTag);
+		List<ProductTag> productTags = tags.stream()
+			.map(tag -> new ProductTag(product, tag))
+			.toList();
+
+		productTagRepository.saveAll(productTags);
 	}
 
 	//특정 상품에 대한 연결 삭제
 	@Transactional
-	public void removeTagFromProduct(int productId, int tagId) {
-		productTagRepository.deleteByProductIdAndTagId(productId, tagId);
+	public void removeAllTagsFromProduct(int productId, List<Integer> tagIds) {
+		if (!productRepository.existsById(productId)) {
+			throw new DataNotFoundException("product", productId);
+		}
+		productTagRepository.deleteTagsByProductIdAndTagIds(productId, tagIds);
+
 	}
 }
 
